# pakagent

./: .aider.chat.history.md  .aider.input.history  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SANDBOX_TEST_MANUAL.md  analysys.md  apply.py  apply.spec  calculator.py  install.sh  llm_loop.py  local_loop.py  main_launcher.py  modify.py  modify.spec  pakagent_config.py  pakapply.py  pakapply.spec  pakdiff.py  pakdiff.spec  pakmod.py  pakmod.spec  pakrestore.py  pakrestore.spec  pakview.py  pakview.spec  prepare.py  prepare.spec  pyproject.toml  revert.py  revert.spec  send.py  send.spec  show_answer.py  show_answer.spec  test_sample.diff
.aider.tags.cache.v4/: cache.db-shm  cache.db-wal
.github/workflows/: ci.yml
path/to/: file.extension
tests/: conftest.py  test_apply.py  test_basic.py  test_config.py  test_imports.py  test_pakapply.py  test_pakdiff.py  test_pakmod.py  test_pakrestore.py  test_prepare.py  test_revert.py  test_send.py  test_show_answer.py
